Correct text alignment.

--- a/public/static/other.css
+++ b/public/static/other.css
@@ -6497,7 +6497,7 @@ a:not(p a), p, code:not(p code), b:not(p b), i:not(p i) { /* Custom */
   .text-centertostart-md {
     text-align: left !important;
   }
-  .text-centertostart-md {
+  .text-centertoend-md {
     text-align: right !important;
 	}
 }
@@ -6506,12 +6506,12 @@ a:not(p a), p, code:not(p code), b:not(p b), i:not(p i) { /* Custom */
   .text-centertostart-lg {
     text-align: left !important;
   }
-  .text-centertostart-lg {
+  .text-centertoend-lg {
     text-align: right !important;
 	}
 }
 
-.text-centertostart-md, .text-centertostart-md, .text-centertostart-lg, .text-centertostart-lg {
+.text-centertostart-md, .text-centertoend-md, .text-centertostart-lg, .text-centertoend-lg {
 	text-align: center;
 }
 
